fix ffmpeg codes

--- a/research/video_show.html
+++ b/research/video_show.html
@@ -1,4 +1,22 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>test</title>
+</head>
+<body>
+
+<video id="player" height="360" width="640" controls preload="none">
+    <source src="http://localhost:8080/hls/streamname.m3u8" type="application/x-mpegURL" />
+</video>
+<script>
+</script>
+</body>
+</html>
+
+
+
+<!-- <!DOCTYPE html>
 <html>
 <link href="video-js.min.css" rel="stylesheet">
 <style>
@@ -35,4 +53,6 @@ var player = videojs('example-video');
 player.play();
 </script>
 </body>
-</html>
+</html> -->
+
+
