add map component

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -30,6 +30,7 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <script src="https://player.eyevinn.technology/v0.4.2/build/eyevinn-html-player.js" type="text/javascript"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f237bc6b135328569b8cbd214a185203"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
