--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -29,7 +29,7 @@
   <body>
     <div id="root"></div>
     <script src="https://player.eyevinn.technology/v0.4.2/build/eyevinn-html-player.js" type="text/javascript"></script>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=f237bc6b135328569b8cbd214a185203"></script>
+    <script type="text/javascript" src="%REACT_APP_KAKAO_MAP_API%"></script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
